--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,5 +18,5 @@ jobs:
         env:
           RUFF_OUTPUT_FORMAT: github
         with:
-          args: >
+          extra_args: >
             --exclude ./bitsandbytes/csrc/xpu_ops.cpp,./bitsandbytes/csrc/xpu_ops.h,./bitsandbytes/csrc/xpu_kernels.cpp,./bitsandbytes/csrc/xpu_kernels.h
