--- a/_typos.toml
+++ b/_typos.toml
@@ -1,9 +1,9 @@
 [files]
 # Skip these files in typo checks
-exclude = [
-    "csrc/xpu_ops.h"
-    "csrc/xpu_ops.cpp"
-    "csrc/xpu_kernels.h"
+extend-exclude = [
+    "csrc/xpu_ops.h",
+    "csrc/xpu_ops.cpp",
+    "csrc/xpu_kernels.h",
     "csrc/xpu_kernels.cpp"
 ]
 
